Remove duplicate tests, conver one